appId: com.dumpling.app

---
- launchApp
- assertVisible: "Party"
- assertVisible: "Full"
- tapOn: "Full"
- tapOn: "Party"
